crates/solidity-v2/testing/snapshots/cst_output/YulStackAssignmentStatement/single_variable/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected UNRECOGNIZED. One of YulBreakKeyword_Reserved, YulCloseBrace, YulContinueKeyword_Reserved, YulDecimalLiteral, YulFalseKeyword_Reserved, YulForKeyword_Reserved, YulFunctionKeyword_Reserved, YulHexLiteral, YulHexStringLiteral, YulIdentifier, YulIfKeyword_Reserved, YulLeaveKeyword_Reserved, YulLetKeyword_Reserved, YulOpenBrace, YulStringLiteral, YulSwitchKeyword_Reserved, YulTrueKeyword_Reserved was expected
   ╭─[ crates/solidity-v2/testing/snapshots/cst_output/YulStackAssignmentStatement/single_variable/input.sol:5:1 ]
   │
 5 │ =: success
   │ ┬  
   │ ╰── Error occurred here.
───╯
